decaf-compiler/samples/lex/badpre.decaf.out

*** Error line 1.
#define 123 bogus
^
*** Unrecognized char: '#'


*** Error line 1.
#define 123 bogus
        ^^^
*** syntax error

